swagger/route update
